// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Count Up block saved block HTML shouldn't change 1`] = `
<BlockContentProvider
  innerBlocks={Array []}
>
  <div
    className="wp-block-ugb-count-up ugb-countup ugb-countup--v3 ugb-countup--columns-2 ugb--background-opacity-2 ugb--has-background-image ugb-countup--design-design ugb--shadow-1 className"
    style={
      Object {
        "--ugb-background-color": "#123456",
        "backgroundAttachment": "fixed",
        "backgroundColor": "#123456",
        "backgroundImage": "url(backgroundImageURL)",
        "borderRadius": 6,
      }
    }
  >
    <div
      className="ugb-content-wrapper"
    >
      <div
        className="ugb-countup__item"
      >
        <Unknown
          className="ugb-countup__title"
          format="string"
          style={
            Object {
              "color": "#123456",
            }
          }
          tagName="h4"
          value="title1"
        />
        <Unknown
          className="ugb-countup__counter"
          data-delay="16"
          data-duration="1000"
          format="string"
          style={
            Object {
              "color": "#123456",
              "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
              "fontSize": "20px",
              "fontWeight": "countFontWeight",
            }
          }
          tagName="div"
          value="countText1"
        />
        <Unknown
          className="ugb-countup__description"
          format="string"
          style={
            Object {
              "color": "#123456",
            }
          }
          tagName="p"
          value="description1"
        />
      </div>
      <div
        className="ugb-countup__item"
      >
        <Unknown
          className="ugb-countup__title"
          format="string"
          style={
            Object {
              "color": "#123456",
            }
          }
          tagName="h4"
          value="title2"
        />
        <Unknown
          className="ugb-countup__counter"
          data-delay="16"
          data-duration="1000"
          format="string"
          style={
            Object {
              "color": "#123456",
              "fontFamily": "-apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
              "fontSize": "20px",
              "fontWeight": "countFontWeight",
            }
          }
          tagName="div"
          value="countText2"
        />
        <Unknown
          className="ugb-countup__description"
          format="string"
          style={
            Object {
              "color": "#123456",
            }
          }
          tagName="p"
          value="description2"
        />
      </div>
    </div>
  </div>
</BlockContentProvider>
`;

exports[`Count Up block saved default block HTML shouldn't change 1`] = `
<BlockContentProvider
  innerBlocks={Array []}
>
  <div
    className="wp-block-ugb-count-up ugb-countup ugb-countup--v3 ugb-countup--columns-4 ugb--background-opacity-5"
    style={
      Object {
        "--ugb-background-color": undefined,
        "backgroundAttachment": undefined,
        "backgroundColor": undefined,
        "backgroundImage": undefined,
        "borderRadius": undefined,
      }
    }
  >
    <div
      className="ugb-content-wrapper"
    >
      <div
        className="ugb-countup__item"
      >
        <Unknown
          className="ugb-countup__title"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="h4"
          value="Title"
        />
        <Unknown
          className="ugb-countup__counter"
          data-delay="16"
          data-duration="1000"
          format="string"
          style={
            Object {
              "color": undefined,
              "fontSize": "40px",
              "fontWeight": "400",
            }
          }
          tagName="div"
          value="$99.99"
        />
        <Unknown
          className="ugb-countup__description"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="p"
          value="Description"
        />
      </div>
      <div
        className="ugb-countup__item"
      >
        <Unknown
          className="ugb-countup__title"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="h4"
          value="Title"
        />
        <Unknown
          className="ugb-countup__counter"
          data-delay="16"
          data-duration="1000"
          format="string"
          style={
            Object {
              "color": undefined,
              "fontSize": "40px",
              "fontWeight": "400",
            }
          }
          tagName="div"
          value="1,234"
        />
        <Unknown
          className="ugb-countup__description"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="p"
          value="Description"
        />
      </div>
      <div
        className="ugb-countup__item"
      >
        <Unknown
          className="ugb-countup__title"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="h4"
          value="Title"
        />
        <Unknown
          className="ugb-countup__counter"
          data-delay="16"
          data-duration="1000"
          format="string"
          style={
            Object {
              "color": undefined,
              "fontSize": "40px",
              "fontWeight": "400",
            }
          }
          tagName="div"
          value="1,234.56"
        />
        <Unknown
          className="ugb-countup__description"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="p"
          value="Description"
        />
      </div>
      <div
        className="ugb-countup__item"
      >
        <Unknown
          className="ugb-countup__title"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="h4"
          value="Title"
        />
        <Unknown
          className="ugb-countup__counter"
          data-delay="16"
          data-duration="1000"
          format="string"
          style={
            Object {
              "color": undefined,
              "fontSize": "40px",
              "fontWeight": "400",
            }
          }
          tagName="div"
          value="£99.99"
        />
        <Unknown
          className="ugb-countup__description"
          format="string"
          style={
            Object {
              "color": undefined,
            }
          }
          tagName="p"
          value="Description"
        />
      </div>
    </div>
  </div>
</BlockContentProvider>
`;
